--- a/templates/overview.html
+++ b/templates/overview.html
@@ -160,7 +160,7 @@
             <button onclick="window.location = window.location.origin;">Logout</button>
         </div>
     </div>
-    <h1>Lacheis kleiner Minifutziserver</h1>
+    <h1>Lacheis kleiner Minifuziserver</h1>
     <div class="container">
 
         <div class="tab">
