--- a/templates/tabs/arbeitsplanung.html
+++ b/templates/tabs/arbeitsplanung.html
@@ -73,6 +73,10 @@
     .affected_event {
         border: 5px solid black;
     }
+
+    .ec-day.ec-today {
+        background-color:#A8E4CEA6;
+    }
 </style>
 <div id="main_time_view">
     <div id="timetable"></div>
