--- a/templates/overview.html
+++ b/templates/overview.html
@@ -77,7 +77,7 @@
         }
 
         .container {
-            padding: 16p;
+            padding: 16px;
             margin: auto;
             max-width: 95%;
         }
