--- a/templates/history.html
+++ b/templates/history.html
@@ -8,6 +8,9 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: min(2vw, .5cm);
         }
+        body {
+            margin:0;
+        }
         h1 {
             font-size: 40px;
             text-align: center;
@@ -23,6 +26,9 @@
         .t {
             display:inline-grid;
         }
+        .f {
+            grid-column: 1/3;
+        }
         .s {
             overflow:scroll;
             height: fit-content;
@@ -34,9 +40,8 @@
   </head>
 
   <body>
-    <div style="display:grid; grid-template-columns:50% 50%; grid-template-rows:50px auto; width: 100%; height: 95vh;">
-      <div class="t"><h1>History of: {{file_name}}</h1></div>
-      <div class="t"></div>
+    <div style="display:grid; grid-template-columns:50% 50%; grid-template-rows:auto auto; width: 100%; height: 100vh;">
+      <div class="t f"><h1>History of: {{file_name}}</h1></div>
       <div id="history" class="t s"></div>
       <div id="details" class="t s"></div>
     </div>
