Qr code generation is now done locally

--- a/templates/tabs/data.html
+++ b/templates/tabs/data.html
@@ -235,6 +235,9 @@
         float:right;
         cursor: pointer;
     }
+    .qr > img {
+        height:100%;
+    }
 
     #search_input {
         width: auto;
@@ -270,6 +273,7 @@
         font-size: 20px;
     }
 </style>
+<script src="/qrcode.min.js"></script>
 
 <div id="file_explorer">
     <div id="tree_search">Here comes the search and tree</div>
@@ -384,7 +388,6 @@
         return (n.toFixed(n < 10 && l > 0 ? 1 : 0) + ' ' + units[l]);
     }
 
-    const qr="https://api.qrserver.com/v1/create-qr-code/";
     function edit_icon(data_extension, data_path, data_type) {
         let final="";
         const edit_icon = "✍";
@@ -394,7 +397,7 @@
             case "gpx": 
             case "rech": final = `<a style='font-size:150%;' onclick='open_editor("${data_path}", "${data_extension}");'> ${edit_icon} </a>&nbsp;`;
             let editor_path = window.location.origin + `/edit_${data_extension}/${data_path}`;
-            final += "<img class='qr' src='" + qr + "?size=150x150&data=" + editor_path + "&format=svg&qzone=1' onclick='window.open(this.src);'>"
+                final += "<div class='qr' url='" + editor_path + "' onclick='window.open(this.children.item(1).src);'></div>"
         }
         if (data_type != "d")
             final += "<a href='/daten/" + data_path + "' download>\u21E9</a>"
@@ -420,11 +423,16 @@
                 list.innerHTML += "<div class='le_div'><a onclick='cur_directory=\"" + element.full_path + "\"; reload_cur_directory();'>" + element.name + "</a></div>";
             else {
                 let filepath = window.location.origin + "/daten/" + element.full_path;
-                list.innerHTML += "<div class='le_div'><a onclick='open_data(\"/daten/" + element.full_path + "\", \"" + element.extension + "\");'>" + element.name + "</a><img class='qr' src='" + qr + "?size=150x150&data=" + filepath + "&format=svg&qzone=1' onclick='window.open(this.src);'></div>";
+                list.innerHTML += "<div class='le_div'><a onclick='open_data(\"/daten/" + element.full_path + "\", \"" + element.extension + "\");'>" + element.name + "</a><div class='qr' url='" + filepath + "' onclick='window.open(this.children.item(1).src);'></div>";
             }
             list.innerHTML += "<div class='le_div'>" + (element.size == 0 ? "" : niceBytes(element.size)) + "</div>";
             list.innerHTML += "<div class='le_div' style='font-aling'>" + edit_icon(element.extension, element.full_path, element.type) + "</div>";
             list.innerHTML += "<div class='le_div'><a href='/git_history/" + element.full_path + "'>" + data_pretty_date(element.change_date) + "</a></div>";
+        }
+        for (let el of document.getElementsByClassName("qr")) {
+            if (el.children.length !== 0)
+                continue;
+            new QRCode(el, el.getAttribute("url"));
         }
     }
 
