--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -102,9 +102,8 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="{{&site_url}}/lin_alg.js"></script>
-<script type="text/javascript" src="{{&site_url}}/virtual_texture.js"></script>
-<script type="text/javascript" src="{{&site_url}}/pro4.js"></script>
+<script type="text/javascript" src="/lin_alg.js"></script>
+<script type="text/javascript" src="/virtual_texture.js"></script>
 <!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>-->
 <script>
     // var spector = new SPECTOR.Spector();
