--- a/templates/editors/md_default.css
+++ b/templates/editors/md_default.css
@@ -107,6 +107,12 @@ ol li.decimal::marker{
     font-weight: bold;
 }
 
+iframe {
+    border: 0;
+    height: 30rem;
+    width: 100%;
+}
+
 .plain,
 .markdown {
     position: absolute;
