--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -306,7 +306,8 @@
     const ballot_box = "&#9744;";
     const ballot_box_checked = "&#9745;";
 
-    var table_data = JSON.parse("{{&file_data}}");
+    var table_data = {};
+    try {table_data = JSON.parse("{{&file_data}}");} catch {}
     var next_end = false;
     var table_rows = 200;
 
